--- a/i_team.html
+++ b/i_team.html
@@ -82,9 +82,6 @@
               <a href="https://scholar.google.com/citations?hl=en&user=Es8-xocAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
             </li>
 
-            <li><a href="https://mher-safaryan.github.io">Mher Safaryan</a> (10/2019-present), KAUST
-              <a href="https://scholar.google.com/citations?hl=en&user=dJNwgT8AAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
-            </li>
           </ul>
 
 
@@ -126,10 +123,6 @@
 
             <li><a href="https://burlachenkok.github.io/home">Konstantin Burlachenko</a> (8/2020-present), KAUST
               <a href="https://scholar.google.com/citations?hl=en&user=3pA-LoQAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
-            </li>
-
-            <li><a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a> (1/2020-present), KAUST
-              <a href="https://scholar.google.com/citations?user=qHFA5z4AAAAJ&hl=en"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
             </li>
 
             <li><a href="http://elnurgasanov.com">Elnur Gasanov</a> (1/2020-present), KAUST
@@ -199,6 +192,12 @@
 
 
           <ul>
+
+            <li><a href="https://mher-safaryan.github.io">Mher Safaryan</a> (10/2019-11/2022), KAUST
+              <a href="https://scholar.google.com/citations?hl=en&user=dJNwgT8AAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
+              <br>  <i>current position: Postdoctoral Fellow, IST Austria, Vienna, Austria</i>
+            </li>
+
             <li><a href="https://konstmish.github.io/">Konstantin Mishchenko</a> (10/2021-12/2021), KAUST
               <a href="https://scholar.google.com/citations?hl=en&user=Z8Y8nhQAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
               <br>  <i>current position: Postdoctoral Fellow, CNRS / École Normale Supérieure / Inria, Paris, France</i>  </li>
@@ -261,6 +260,12 @@
 
 
           <ul>
+
+            <li><a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a> (1/2020-9/2022), KAUST
+              <a href="https://scholar.google.com/citations?user=qHFA5z4AAAAJ&hl=en"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
+              <br>thesis: <a href=""> </a> <br>
+               <i>next position: Postdoctoral Fellow, Université catholique de Louvain, Louvain-la-Neuve, Belgium</i>
+            </li>
 
             <li><a href="https://samuelhorvath.github.io">Samuel Horváth</a> (1/2019-6/2022), KAUST
               <a href="https://scholar.google.com/citations?hl=en&user=k252J7kAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
