--- a/i_talks.html
+++ b/i_talks.html
@@ -70,15 +70,11 @@ NeurIPS 2022, New Orleans, USA, November 2022
 </p>
 
 <p>
-Introduction to Optimization 2/2, Aramco, November 17-20, 2022
+Introduction to Optimization 2/2, Aramco, November 17-20, 2022 (24 hours)
 </p>
 
 <p>
-Google 2022 Workshop on Federated Learning and Analytics, November 9-10, 2022 (invited by Peter Kairouz)
-</p>
-
-<p>
-Introduction to Optimization 1/2, Aramco, November 3-6, 2022
+KAUST Workshop on Scientific Computing and Machine Learning (invited by Jinacho Xu)
 </p>
 
 <!-- <p>
@@ -87,6 +83,16 @@ Introduction to Optimization 1/2, Aramco, November 3-6, 2022
 !-->
 
 <h1>2022 Talks</h1>
+
+<p>
+[218] 
+Google's <a href="https://rsvp.withgoogle.com/events/2022-workshop-on-federated-learning-and-analytics">2022 Workshop on Federated Learning and Analytics</a>, November 9-10, 2022 (invited by Peter Kairouz)
+</p>
+
+<p>
+[217]
+Introduction to Optimization 1/2, Aramco, November 3-6, 2022 (24 hours)
+</p>
 
 <p>
 [216]
