--- a/i_talks.html
+++ b/i_talks.html
@@ -69,13 +69,9 @@ for Mathematical Sciences, National University of Singapore, Singapore, December
 NeurIPS 2022, New Orleans, USA, November 2022
 </p>
 
-<p>
-Introduction to Optimization 2/2, Aramco, November 17-20, 2022 (24 hours)
-</p>
 
-<p>
-KAUST Workshop on Scientific Computing and Machine Learning (invited by Jinacho Xu)
-</p>
+
+
 
 <!-- <p>
 <a href="https://irdta.eu/deeplearn/2022au/">7th International School on Deep Learning (DeepLearn 2022 Autumn)</a>, Luleå, Sweden, October 17-21, 2022 (invited 4.5h mini-course on Federated Learning)
@@ -85,7 +81,17 @@ KAUST Workshop on Scientific Computing and Machine Learning (invited by Jinacho 
 <h1>2022 Talks</h1>
 
 <p>
-[218] 
+[220]
+Introduction to Optimization 2/2, Aramco, November 17-20, 2022 (24 hours)
+</p>
+
+<p>
+[219]
+KAUST Workshop on Scientific Computing and Machine Learning, KAUST, November 14, 2022 [<a href="TALK-2022-11-14-SCML-Workshop.pdf">slides</a>] (invited by Jinacho Xu)
+</p>
+
+<p>
+[218]
 Google's <a href="https://rsvp.withgoogle.com/events/2022-workshop-on-federated-learning-and-analytics">2022 Workshop on Federated Learning and Analytics</a>, November 9-10, 2022 (invited by Peter Kairouz)
 </p>
 
