--- a/i_team.html
+++ b/i_team.html
@@ -137,7 +137,7 @@
 
                 <ul>
 
-                  <li><a href="https://www.linkedin.com/in/rafał-szlendak-552936220/?originalSubdomain=uk">Rafal Szlendak</a> (8/2022-present), KAUST
+                  <li><a href="https://cemse.kaust.edu.sa/people/person/rafal-szlendak">Rafal Szlendak</a> (8/2022-present), KAUST
                     <a href="https://scholar.google.com/citations?user=R-xZRIAAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
                   </li>
 
