--- a/i_talks.html
+++ b/i_talks.html
@@ -53,6 +53,19 @@ Emerging opportunities for statistics and data sciences: data and information in
 </p>
 
 <p>
+<a href="https://icml.cc/Conferences/2023/Dates">ICML 2023</a>, Honolulu, Oahu, Hawaii, USA, July 23-29, 2023
+</p>
+
+<p>
+<a href="https://iclr.cc/Conferences/2023">ICLR 2023</a>, Kigali, Rwanda, May 1-5, 2023
+</p>
+
+<p>
+<a href="http://aistats.org/aistats2023/">AISTATS 2023</a>, Valencia, Spain, April 25-27, 2023
+</p>
+
+
+<p>
 Research Seminar, Rice University, Houston, USA, January 20, 2023 (invited by Shiqian Ma)
 </p>
 
