--- a/index.html
+++ b/index.html
@@ -44,6 +44,25 @@
         <div id="content">
 
 
+<h3>November 16, 2022</h3>
+
+<h1>Teaching at Saudi Aramco</h1>
+
+Just arrived to Al Khobar, a Saudi Arabian city on the Arabian Gulf. I will be teaching "Introduction to Optimization" in a
+KAUST-Aramco MS program that started this year. My PhD students <a href="https://cemse.kaust.edu.sa/amcs/people/person/igor-sokolov">Igor Sokolov</a> and
+<a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a> are here with me as TAs. Four full days of teaching (6 hrs a day), and then four
+more at the end of November. Should be fun!
+</a>
+
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
 <h3>November 9-10, 2022</h3>
 
 <h1>Attending 2022 Workshop on Federated Learning and Analytics</h1>
@@ -76,7 +95,7 @@ Just arrived to Al Khobar, a Saudi Arabian city on the Arabian Gulf. I will be t
 KAUST-Aramco MS program that started this year. My PhD students <a href="https://cemse.kaust.edu.sa/amcs/people/person/igor-sokolov">Igor Sokolov</a> and
 <a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a> are here with me as TAs. Four full days of teaching (6 hrs a day), and then four
 more at the end of November. Should be fun!
-</a>.
+</a>
 
 <br>
 
@@ -107,7 +126,7 @@ joint work with
 <br>
 Abstract:
 <i>
-In this work, we study distributed optimization algorithms that reduce the high communication costs of synchronization by allowing clients to perform multiple local gradient steps in each communication round. Recently, Mishchenko et al. (2022) proposed a new type of local method, called ProxSkip, that enjoys an accelerated communication complexity without any data similarity condition. However, their method requires all clients to call local gradient oracles with the same frequency. Because of statistical heterogeneity, we argue that clients with well-conditioned local problems should compute their local gradients less frequently than clients with ill-conditioned local problems. Our first contribution is the extension of the original ProxSkip method to the setup where clients are allowed to perform a different number of local gradient steps in each communication round. We prove that our modified method, GradSkip, still converges linearly, has the same accelerated communication complexity, and the required frequency for local gradient computations is proportional to the local condition number. Next, we generalize our method by extending the randomness of probabilistic alternations to arbitrary unbiased compression operators and considering a generic proximable regularizer. This generalization, GradSkip+, recovers several related methods in the literature. Finally, we present an empirical study to confirm our theoretical claims.
+In this paper, we present the first stepsize schedule for Newton method resulting in fast global and local convergence guarantees. In particular, a) we prove an $O(1/k^2)$ global rate, which matches the state-of-the-art global rate of cubically regularized Newton method of Polyak and Nesterov (2006) and of regularized Newton method of Mishchenko (2021) and Doikov and Nesterov (2021), b) we prove a local quadratic rate, which matches the best-known local rate of second-order methods, and c) our stepsize formula is simple, explicit, and does not require solving any subproblem. Our convergence proofs hold under affine-invariance assumptions closely related to the notion of self-concordance. Finally, our method has competitive performance when compared to existing baselines, which share the same fast global convergence guarantees.
 </i>
 <br>
 
