--- a/i_papers.html
+++ b/i_papers.html
@@ -271,7 +271,7 @@
 
           [176] Xun Qian, Rustem Islamov, Mher Safaryan and Peter Richtárik<br>
           <b>Basis matters: better communication-efficient second order methods for federated learning</b><br>
-          24th International Conference on Artificial Intelligence and Statistics (AISTATS 2022) <br>
+          <a href="https://proceedings.mlr.press/v151/qian22a.html">24th International Conference on Artificial Intelligence and Statistics (AISTATS 2022)</a> <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2111.01847">arXiv</a>] [code: BL1, BL2, BL3] <br>
           <br>
@@ -284,7 +284,7 @@
 
           [174] Rafał Szlendak, Alexander Tyurin and Peter Richtárik<br>
           <b>Permutation compressors for provably faster distributed nonconvex optimization</b><br>
-          10th International Conference on Learning Representations (ICLR 2022)  <br>
+          <a href="https://openreview.net/pdf?id=GugZ5DzzAu">10th International Conference on Learning Representations (ICLR 2022)</a>  <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2110.03300">arXiv</a>] [code: MARINA] [<a href="https://www.youtube.com/watch?v=aMEj2pkGrcY">video</a>] <br>
           <br>
