--- a/i_papers.html
+++ b/i_papers.html
@@ -53,8 +53,13 @@
 
           <h1> Prepared in 2022 </h1>
 
+          [211] Maksim Makarenko, Elnur Gasanov, Rustem Islamov, Abdurakhmon Sadiev and Peter Richtárik<br>
+          <b>Adaptive compression for communication-efficient distributed training</b><br>
+          [<a href="https://arxiv.org/abs/2211.00188">arXiv</a>] <br>
+          <br>
+
           [210] Slavomír Hanzely, Dmitry Kamzolov, Dmitry Pasechnyuk, Alexander Gasnikov, Peter Richtárik and Martin Takáč <br>
-          <b>A damped Newton method achieves global $0(1/k^2)$ and local quadratic convergence rate</b><br>
+          <b>A damped Newton method achieves global $O(1/k^2)$ and local quadratic convergence rate</b><br>
           Advances in Neural Information Processing Systems 35 (NeurIPS 2022) <br>
           [<a href="https://arxiv.org/abs/2211.00140">arXiv</a>] <br>
           <br>
@@ -590,6 +595,7 @@
 
           [129] Atal Narayan Sahu, Aritra Dutta, Aashutosh Tiwari, and Peter Richtárik <br>
           <b>On the convergence analysis of asynchronous SGD for solving consistent linear systems</b><br>
+          To appear in Linear Algebra and its Applications <br>
           [<a href="https://arxiv.org/abs/2004.02163">arXiv</a>] [code: DASGD] <br>
           <br>
 
