--- a/index.html
+++ b/index.html
@@ -44,6 +44,196 @@
         <div id="content">
 
 
+
+<h3>December 3, 2022</h3>
+
+<h1>Attending "Optimization in the Big Data Era" workshop in Singapore</h1>
+
+I am flying to Singapore (my first time ever!) to attend the <a href="https://ims.nus.edu.sg/events/optimization-in-the-big-data-era/">Optimization in the Big Data Era</a> workshop at the  Institute for Mathematical Sciences, National University of Singapore, organized
+by <a href="http://pages.cs.wisc.edu/~swright/">Stephen J. Wright</a> (University of Wisconsin), <a href="https://www.polyu.edu.hk/ama/profile/dfsun/">Defeng Sun</a> (The Hong Kong Polytechnic University) and <a href="http://ww1.math.nus.edu.sg/staff.aspx?s=mattohkc">Kim Chuan Toh</a>
+(National University of Singapore). The event was planned long ago, but got delayed because of the Covid 19 situation. It's finally taking place now!
+
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+<h3>November 26, 2022</h3>
+
+<h1>NeurIPS 2022 @ New Orleans</h1>
+
+Several members of my lab are attending  the <a href="https://nips.cc/Conferences/2022">36th Annual Conference on Neural Information Processing Systems (NeurIPS 2022)</a> in New Orleans.
+We have 12 papers accepted. In addition, we presented 3 workshop papers.
+
+<br><br>
+Our NeurIPS 2022 conference papers:
+<br>
+<br>
+
+<br>
+<br>
+<img alt="KAUST Optimization and Machine Learning Lab" src="imgs/OML-richtarik-NeurIPS2022.jpeg" width="720">
+<br>
+<br>
+
+
+<b> 1) "Accelerated Primal-Dual Gradient Method for Smooth and Convex-Concave Saddle-Point Problems with Bilinear Coupling"</b>
+<a href="https://arxiv.org/abs/2112.15199">[arXiv]</a>  -
+joint work with
+<a href="https://www.dmitry-kovalev.com">Dmitry Kovalev (*)</a> and
+<a href="https://www.hse.ru/en/org/persons/49503846">Alexander Gasnikov</a>.
+<br>
+<br>
+
+<b> 2) "The First Optimal Algorithm for Smooth and Strongly-Convex-Strongly-Concave Minimax Optimization"</b>
+<a href="https://arxiv.org/abs/2205.05653">[arXiv]</a>  -
+the work of
+<a href="https://www.dmitry-kovalev.com">Dmitry Kovalev (*)</a> and
+<a href="https://www.hse.ru/en/org/persons/49503846">Alexander Gasnikov</a>.
+<br>
+<br>
+
+<b> 3) "A Damped Newton Method Achieves Global $O(1/k^2)$ and Local Quadratic Convergence Rate"</b> -
+joint work with
+<a href="https://slavomir-hanzely.github.io/">Slavomir Hanzely (*)</a>
+<a href="https://www.researchgate.net/profile/Dmitry-Kamzolov">Dmitry Kamzolov</a>
+<a href="http://dmivilensky.ru/">Dmitry Pasechnyuk</a>
+<a href="https://www.hse.ru/en/org/persons/49503846">Alexander Gasnikov</a>, and
+<a href="https://mtakac.com/">Martin Takáč</a>.
+<br>
+<br>
+
+<b> 4) "Variance Reduced ProxSkip: Algorithm, Theory and Application to Federated Learning"</b>
+<a href="https://arxiv.org/abs/2207.04338">[arXiv]</a>  -
+joint work with
+<a href="https://grigory-malinovsky.github.io/">Grigory Malinovsky (*)</a> and
+<a href="https://kaiyi.me/">Kai Yi (*)</a>.
+<br>
+<br>
+
+<b> 5) "Theoretically Better and Numerically Faster Distributed Optimization with Smoothness-Aware Quantization Techniques"</b>
+<a href="https://arxiv.org/abs/2106.03524">[arXiv]</a>  -
+joint work with
+<a href="https://bokun-wang.github.io/">Bokun Wang (*)</a> and
+<a href="https://mher-safaryan.github.io/">Mher Safaryan (*)</a>.
+<br>
+<br>
+
+<b> 6) "Communication Acceleration of Local Gradient Methods via an Accelerated Primal-Dual Algorithm with an Inexact Prox"</b>
+<a href="https://arxiv.org/abs/2207.03957">[arXiv]</a>  -
+joint work with
+<a href="https://www.researchgate.net/profile/Abdurakhmon-Sadiev">Abdurakhmon Sadiev (*)</a> and
+<a href="https://www.dmitry-kovalev.com">Dmitry Kovalev (*)</a>.
+<br>
+<br>
+
+<b> 7) "Distributed Methods with Compressed Communication for Solving Variational Inequalities, with Theoretical Guarantees"</b>
+<a href="https://arxiv.org/abs/2110.03313">[arXiv]</a>  -
+joint work with
+<a href="https://anbeznosikov.github.io/">Aleksandr Beznosikov</a>,
+<a href="https://www.hse.ru/en/staff/yhn112">Michael Diskin</a>,
+<a href="https://scholar.google.com/citations?user=930PERsAAAAJ&hl=en">Max Ryabinin</a> and
+<a href="https://www.hse.ru/en/org/persons/49503846">Alexander Gasnikov</a>.
+<br>
+<br>
+
+<b> 8) "BEER: Fast $O(1/T)$ Rate for Decentralized Nonconvex Optimization with Communication Compression"</b>
+<a href="https://arxiv.org/abs/2201.13320">[arXiv]</a>  -
+joint work with
+<a href="https://hyzhao.me/">Haoyu Zhao</a>,
+<a href="https://www.lti.cs.cmu.edu/people/222218029/boyue-li">Boyue Li</a>,
+<a href="https://zhizeli.github.io/">Zhize Li (*)</a> and
+<a href="https://users.ece.cmu.edu/~yuejiec/">Yuejie Chi</a>.
+<br>
+<br>
+
+<b> 9) "The First Optimal Acceleration of High-Order Methods in Smooth Convex Optimization"</b>
+<a href="https://arxiv.org/abs/2205.09647">[arXiv]</a>  -
+the work of
+<a href="https://www.dmitry-kovalev.com">Dmitry Kovalev (*)</a> and
+<a href="https://www.hse.ru/en/org/persons/49503846">Alexander Gasnikov</a>.
+<br>
+<br>
+
+<b> 10) "Optimal Gradient Sliding and its Application to Optimal Distributed Optimization Under Similarity"</b>
+<a href="https://arxiv.org/abs/2205.15136">[arXiv]</a>  -
+the work of
+<a href="https://www.dmitry-kovalev.com">Dmitry Kovalev (*)</a>,
+<a href="https://anbeznosikov.github.io/">Aleksandr Beznosikov</a>,
+<a href="https://scholar.google.be/citations?user=9Dapoy8AAAAJ&hl=fr">Ekaterina Borodich</a>,
+<a href="https://www.hse.ru/en/org/persons/49503846">Alexander Gasnikov</a> and
+<a href="https://engineering.purdue.edu/~gscutari/">Gesualdo Scutari</a>.
+<br>
+<br>
+
+<b> 11) "Optimal Algorithms for Decentralized Stochastic Variational Inequalities"</b>
+<a href="https://arxiv.org/abs/2202.02771">[arXiv]</a>  -
+joint work with
+<a href="https://www.dmitry-kovalev.com">Dmitry Kovalev (*)</a>,
+<a href="https://anbeznosikov.github.io/">Aleksandr Beznosikov</a>,
+<a href="https://www.researchgate.net/profile/Abdurakhmon-Sadiev">Abdurakhmon Sadiev (*)</a>,
+<a href="https://engineering.purdue.edu/~gscutari/"> Michael Persiianov</a> and
+<a href="https://www.hse.ru/en/org/persons/49503846">Alexander Gasnikov</a>.
+<br>
+<br>
+
+<b> 12) "EF-BV: A Unified Theory of Error Feedback and Variance Reduction Mechanisms for Biased and Unbiased Compression in
+Distributed Optimization"</b>
+<a href="https://arxiv.org/abs/2205.04180">[arXiv]</a>  -
+joint work with
+<a href="https://lcondat.github.io/">Laurent Condat (*)</a> and
+<a href="https://kaiyi.me/">Kai Yi (*)</a>.
+<br>
+<br>
+
+<br><br>
+(*) Members of my Optimization and Machine Learning Lab at KAUST.
+<br><br>
+
+<br><br>
+Our NeurIPS 2022 workshop papers:
+<br>
+<br>
+
+<b> 13) "Certified Robustness in Federated Learning" @ Federated Learning NeurIPS 2022 Workshop</b>
+<a href="https://arxiv.org/abs/2206.02535">[arXiv]</a>  -
+joint work with
+<a href="https://motasemalfarra.netlify.app">Motasem Alfarra</a>,
+<a href="https://www.juancprzs.com">Juan C. Pérez</a>,
+<a href="https://shulgin-egor.github.io">Egor Shulgin</a>, and
+<a href="https://www.bernardghanem.com">Bernard Ghanem</a>
+<br>
+<br>
+
+<b> 14) "Distributed Newton-Type Methods with Communication Compression and Bernoulli Aggregation" @ HOOML NeurIPS 2022 Workshop</b>
+<a href="https://arxiv.org/abs/2206.03588">[arXiv]</a>  -
+joint work with
+<a href="https://rustem-islamov.github.io/">Rustem Islamov</a>,
+<a href="https://qianxunk.github.io/">Xun Qian</a>,
+<a href="https://slavomir-hanzely.github.io/">Slavomír Hanzely</a>, and
+<a href="https://mher-safaryan.github.io/">Mher Safaryan</a>.
+<br>
+<br>
+
+<b> 15) "RandProx: Primal-Dual Optimization Algorithms with Randomized Proximal Updates" @ OPT NeurIPS 2022 Workshop</b>
+<a href="https://arxiv.org/abs/2207.12891">[arXiv]</a>  -
+joint work with
+<a href="https://lcondat.github.io/">Laurent Condat</a>.
+<br>
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
 <h3>November 16, 2022</h3>
 
 <h1>Teaching at Saudi Aramco</h1>
