--- a/i_papers.html
+++ b/i_papers.html
@@ -53,6 +53,11 @@
 
           <h1> Prepared in 2022 </h1>
 
+          [212] Michał Grudzień, Grigory Malinovsky and Peter Richtárik<br>
+          <b>Can 5th generation local training methods support client sampling? Yes!</b><br>
+          [<a href="https://arxiv.org/abs/2212.14370">arXiv</a>] <br>
+          <br>
+
           [211] Maksim Makarenko, Elnur Gasanov, Rustem Islamov, Abdurakhmon Sadiev and Peter Richtárik<br>
           <b>Adaptive compression for communication-efficient distributed training</b><br>
           [<a href="https://arxiv.org/abs/2211.00188">arXiv</a>] <br>
@@ -661,6 +666,7 @@
 
           [119] Ahmed Khaled and Peter Richtárik<br>
           <b>Better theory for SGD in the nonconvex world</b><br>
+          <a href="https://openreview.net/pdf?id=AU4qHN2VkS">Transactions on Machine Learning Research (TMLR), 2022</a> <br>
           [<a href="https://arxiv.org/abs/2002.03329">arXiv</a>]<br>
           <br>
 
