--- a/i_papers.html
+++ b/i_papers.html
@@ -51,6 +51,14 @@
           <meta charset="utf-8">
 
 
+          <h1> Prepared in 2023 </h1>
+
+          [213] Slavomír Hanzely, Konstantin Mishchenko and Peter Richtárik<br>
+          <b>Convergence of first-order algorithms for meta-learning with Moreau envelopes</b><br>
+          [<a href="https://arxiv.org/abs/2301.06806">arXiv</a>] <br>
+          <br>
+
+
           <h1> Prepared in 2022 </h1>
 
           [212] Michał Grudzień, Grigory Malinovsky and Peter Richtárik<br>
@@ -600,7 +608,7 @@
 
           [129] Atal Narayan Sahu, Aritra Dutta, Aashutosh Tiwari, and Peter Richtárik <br>
           <b>On the convergence analysis of asynchronous SGD for solving consistent linear systems</b><br>
-          To appear in Linear Algebra and its Applications <br>
+          <a href="https://www.sciencedirect.com/science/article/pii/S0024379522004517?dgcid=coauthor">Linear Algebra and its Applications, 2022</a> <br>
           [<a href="https://arxiv.org/abs/2004.02163">arXiv</a>] [code: DASGD] <br>
           <br>
 
