--- a/index.html
+++ b/index.html
@@ -43,6 +43,55 @@
       <div id="wrapper" class="main">
         <div id="content">
 
+
+<h3>January 20, 2022</h3>
+
+<h1>Visiting Rice University</h1>
+
+I am giving a <a href="https://events.rice.edu/#!view/event/event_id/340417">CMOR Special Lecture</a> at Rice University today, and meeting several people, including
+Shiqian Ma, Anastasios (Tasos) Kyrillidis,  Sebastian Perez-Salazar, Matthias Heinkenschloss, Eric Chi, Jingfeng Wu,
+César A. Uribe,  Teng Zhang and Illya Hicks. Looking forward to the conversations!
+
+
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+<h3>January 17, 2022</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2301.06806">
+"Convergence of First-Order Algorithms for Meta-Learning with Moreau Envelopes"</a> -
+joint work with
+<a href="https://www.konstmish.com">Konstantin Mishchenko</a> and
+<a href="https://slavomir-hanzely.github.io">Slavomír Hanzely</a>.
+
+
+<br>
+<br>
+Abstract:
+<i>
+In this work, we consider the problem of minimizing the sum of Moreau envelopes of given functions, which has previously appeared in the context of meta-learning and personalized federated learning. In contrast to the existing theory that requires running subsolvers until a certain precision is reached, we only assume that a finite number of gradient steps is taken at each iteration. As a special case, our theory allows us to show the convergence of First-Order Model-Agnostic Meta-Learning (FO-MAML) to the vicinity of a solution of Moreau objective. We also study a more general family of first-order algorithms that can be viewed as a generalization of FO-MAML. Our main theoretical achievement is a theoretical improvement upon the inexact SGD framework. In particular, our perturbed-iterate analysis allows for tighter guarantees that improve the dependency on the problem's conditioning. In contrast to the related work on meta-learning, ours does not require any assumptions on the Hessian smoothness, and can leverage smoothness and convexity of the reformulation based on Moreau envelopes. Furthermore, to fill the gaps in the comparison of FO-MAML to the Implicit MAML (iMAML), we show that the objective of iMAML is neither smooth nor convex, implying that it has no convergence guarantees based on the existing theory.
+</i>
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+
 <h3>December 29, 2022</h3>
 
 <h1>New Paper</h1>
