--- a/i_talks.html
+++ b/i_talks.html
@@ -66,23 +66,8 @@ Emerging opportunities for statistics and data sciences: data and information in
 
 
 <p>
-Research Seminar, Rice University, Houston, USA, January 20, 2023 (invited by Shiqian Ma)
-</p>
-
-<p>
 DistributedML Seminar, Virtual, Qualcomm AI Research, 2023
 </p>
-
-<p>
-<a href="https://ims.nus.edu.sg/events/optimization-in-the-big-data-era/">Optimization in the Big Data Era</a>, Institute
-for Mathematical Sciences, National University of Singapore, Singapore, December 5-9, 2022 (invited)
-</p>
-
-<p>
-NeurIPS 2022, New Orleans, USA, November 2022
-</p>
-
-
 
 
 
@@ -92,6 +77,17 @@ NeurIPS 2022, New Orleans, USA, November 2022
 !-->
 
 <h1>2022 Talks</h1>
+
+<p>
+[222]
+<a href="https://events.rice.edu/#!view/event/event_id/340417">CMOR Special Lecture</a>, Rice University, Houston, USA, January 20, 2023 (invited by Shiqian Ma)
+</p>
+
+<p>
+[221]
+<a href="https://ims.nus.edu.sg/events/optimization-in-the-big-data-era/">Optimization in the Big Data Era</a>, Institute
+for Mathematical Sciences, National University of Singapore, Singapore, December 5-9, 2022 (invited)
+</p>
 
 <p>
 [220]
