ICLR and AISTATS accepted papers

--- a/i_papers.html
+++ b/i_papers.html
@@ -20,10 +20,10 @@
         gtag('config', 'UA-168147887-3');
       </script>
 
+</head>
 
 
 
-  </head>
   <body>
     <div id="page">
       <div id="header_wrapper">
@@ -63,11 +63,14 @@
 
           [212] Michał Grudzień, Grigory Malinovsky and Peter Richtárik<br>
           <b>Can 5th generation local training methods support client sampling? Yes!</b><br>
+          <span class="important">Federated Learning Paper</span><br>
+          25th International Conference on Artificial Intelligence and Statistics (AISTATS 2023) <br>
           [<a href="https://arxiv.org/abs/2212.14370">arXiv</a>] <br>
           <br>
 
           [211] Maksim Makarenko, Elnur Gasanov, Rustem Islamov, Abdurakhmon Sadiev and Peter Richtárik<br>
           <b>Adaptive compression for communication-efficient distributed training</b><br>
+          <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2211.00188">arXiv</a>] <br>
           <br>
 
@@ -118,13 +121,14 @@
 
           [202] Laurent Condat and Peter Richtárik <br>
           <b>RandProx: Primal-dual optimization algorithms with randomized proximal updates</b><br>
+          11th International Conference on Learning Representations (ICLR 2023) <br>
           OPT2022: 14th Annual Workshop on Optimization for Machine Learning (NeurIPS 2022 Workshop)<br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2207.12891">arXiv</a>] [code: RandProx, RandProx-FB, RandProx-LC, RandProx-CP, RandProx-ADMM, RandProx-DY] <br>
           <br>
 
           [201] Grigory Malinovsky, Kai Yi and Peter Richtárik <br>
-          <b>Variance reduced ProxSkip: Algorithm, theory and application to federated learning</b><br>
+          <b>Variance reduced ProxSkip: algorithm, theory and application to federated learning</b><br>
           Advances in Neural Information Processing Systems 35 (NeurIPS 2022) <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2207.04338">arXiv</a>] [code: ProxSkip-VR, ProxSkip-GD, ProxSkip-SGD, ProxSkip-LSVRG, ProxSkip-HUB] <br>
@@ -183,12 +187,14 @@
 
           [192] Eduard Gorbunov, Samuel Horváth, Peter Richtárik and Gauthier Gidel<br>
           <b>Variance reduction is an antidote to Byzantines: better rates, weaker assumptions and communication compression as a cherry on the top</b><br>
+          11th International Conference on Learning Representations (ICLR 2023) <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2206.00529">arXiv</a>] [code: Byz-VR-MARINA] <br>
           <br>
 
           [191] Lukang Sun, Avetik Karagulyan and Peter Richtárik<br>
           <b>Convergence of Stein variational gradient descent under a weaker smoothness condition</b><br>
+          25th International Conference on Artificial Intelligence and Statistics (AISTATS 2023) <br>
           [<a href="https://arxiv.org/abs/2206.00508">arXiv</a>] [code: SVGD] <br>
           <br>
 
@@ -232,7 +238,8 @@
           <br>
 
           [184] Alexander Tyurin and Peter Richtárik<br>
-          <b>Distributed nonconvex optimization with communication compression, optimal oracle complexity, and no client synchronization</b><br>
+          <b>DASHA: Distributed nonconvex optimization with communication compression and optimal oracle complexity</b><br>
+          10th International Conference on Learning Representations (ICLR 2023) <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2202.01268">arXiv</a>] [code: DASHA, DASHA-PAGE, DASHA-MVR] <br>
           <br>
